--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
     align-items: center;
     position: relative; /* WAJIB: Agar tombol absolute tetap di dalam sini */
     overflow: hidden;   /* Mencegah scrollbar muncul di dalam embed */
+    gap: 2px;
 }
 
 .book-container {
