--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ body {
 
 /* --- TOOLBAR TETAP DI BAWAH --- */
 .toolbar-container {
-    position: relative; 
+    position: absolute; 
     z-index: 10;
     display: flex;
     flex-direction: column;
