--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ body {
     position: absolute; 
     z-index: 10;
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
 }
