--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ body {
 
     /* Di Mobile, sembunyikan semua shadow custom agar tidak berat/aneh */
     .book-container {
-        width: auto;
-        height: auto;
+        width: 100%;
+        height: 100%;
         justify-content: center;
         align-items: flex-start;
     }
