--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative; /* WAJIB: Agar tombol absolute tetap di dalam sini */
+    position: absolute; /* WAJIB: Agar tombol absolute tetap di dalam sini */
     overflow: hidden;   /* Mencegah scrollbar muncul di dalam embed */
     gap: 15px;
     flex-direction: column;
@@ -187,8 +187,8 @@ body {
 
     /* Di Mobile, sembunyikan semua shadow custom agar tidak berat/aneh */
     .book-container {
-        width: 100%;
-        height: 100%;
+        width: auto;
+        height: auto;
         justify-content: center;
         align-items: flex-start;
     }
