--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 
 /* --- VIEWPORT --- */
 .viewport {
-    width: 100%;
-    height: 100%;
+    width: 960px;
+    height: 680px;
     position: relative; /* Menjadi patokan elemen melayang */
     display: flex;
     justify-content: center;
