--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
     width: 100%; height: 100%;
     display: flex; justify-content: center; align-items: center;
     position: relative;
+    flex-direction: column; /* Mengatur susunan vertikal */
+    gap: 5px;              /* Memberi jarak aman antara buku dan toolbar */
 }
 
 /* Container Utama */
