--- a/style.css
+++ b/style.css
@@ -151,7 +151,8 @@ body {
 /* --- TOOLBAR CONTAINER (TENGAH BAWAH) --- */
 .toolbar-container {
     position: relative;
-    bottom: 10px;
+    bottom: 5px;
+    left: 5%;
     transform: translateX(-50%);
     z-index: 1001;
     display: flex;
