--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 
 /* --- TOOLBAR CONTAINER (TENGAH BAWAH) --- */
 .toolbar-container {
-    position: relative;
+    position: absolute;
     bottom: 2px;
     top: 0; left: 0;
     transform: translateX(-50%);
