--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
 .toolbar-container {
     position: absolute;
     bottom: 2px;
-    top: 0; left: 0;
+    top: 90%; left: 50%;
     transform: translateX(-50%);
     z-index: 1001;
     display: flex;
