--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ body {
 }
 
 .toolbar {
-    background: #ffffff;
+    background: #ffffff6e;
     padding: 6px 15px;
     border-radius: 8px;
     display: flex;
